[FEATURE] user registration

--- a/src/main/resources/localization/messages_en.properties
+++ b/src/main/resources/localization/messages_en.properties
@@ -2,6 +2,7 @@
 COMMON_TITLE=Javalin Bug Trucker
 COMMON_FOOTER_TEXT=This Application uses <a href="https://openlibrary.org/" target="_blank">OpenLibrary</a> for images.
 COMMON_NAV_LOGIN=Log in
+COMMON_NAV_RGISTER=Sign up
 COMMON_NAV_LOGOUT=Log out
 ERROR_404_NOT_FOUND=We can't find the page you're looking for <small>(error 404)</small>
 ## Login
